--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,22 @@
 html {
     font-size: 62.5%; /* Reset para REMS - 62.5% = 10 px de 16 px */
+    box-sizing: border-box;
 }
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
 body {
     font-family: 'Lato', sans-serif;
+    font-size: 1.6rem;
+    line-height: 2;
 }
 
 /**Globlaes**/
-
+img {
+    max-width: 100%;
+}
 
 h1 {
     font-size: 3.6rem;
@@ -29,6 +39,47 @@ h4 {
     margin-left: auto;
     margin-right: auto;
 }
+/** Utilidades */
+
+
+
+.seccion {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.fw300 {
+    font-weight: 300;
+}
+
+.center {
+    text-align: center;
+}
+
+.d-block {
+    display: block!important;
+}
+/** Botones **/
+
+.boton{
+    font-size: 1.6rem;
+    color: #ffff;
+    font-weight: 700;
+    padding: 1rem 3rem;
+    display: inline-block;
+    margin-top: 3rem;
+    text-align: center;
+    text-decoration: none;
+}
+
+.boton-amarillo {
+    background: #E08709;
+}
+
+.boton-verde {
+    background: #71b100;
+}
+
 
 /*Header*/
 .site-header.inicio {
@@ -73,4 +124,176 @@ h4 {
 .navegacion a:last-of-type {
     margin-right: 0;
 }
+/** Iconos Nosotros**/
+.iconos-nosotros {
+    display: flex;
+    justify-content: space-between;
+}
+.encabezado-nosotros {
+    font-weight: 300;
+    text-align: center;
+}
 
+.iconos{
+    flex-basis: calc(33.3% - 1rem);
+    text-align: center;
+}
+
+.iconos h3 {
+    text-transform: uppercase;
+}
+
+/** Anuncios **/
+.contenedor-anuncios {
+    display: flex;
+    justify-content: space-between;
+}
+
+.anuncio{
+    flex-basis: calc(33.3% - 1rem);
+    border: 1px solid #B5B5B5;
+    background: #f5f5f5;
+}
+
+.contenido-anuncio {
+    padding: 2rem;
+}
+
+.contenedor-anuncios h3 {
+    margin: 0px;  
+}
+
+.contenedor-anuncios p {
+    margin: 0px;
+}
+
+.precio {
+    color: #71b100;
+    font-weight: 700;
+}
+
+.ver-todas {
+    display: flex;
+    justify-content: flex-end;
+
+}
+
+/** Contacto Home */
+
+.imagen-contacto {
+    background-image: url(../img/encuentra.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 40rem;
+    display: flex;
+    align-items: center;
+}
+
+.contenido-contacto{
+    flex: 1;
+    color: #FFFFFF;
+}
+
+.contenido-contacto p {
+    font-size: 1.8rem;
+}
+
+/** Sección inferior **/
+.seccion-inferior {
+    display: flex;
+    justify-content: space-between;
+}
+
+.seccion-inferior .blog {
+    flex-basis: 60%;
+}
+
+.seccion-inferior .testimoniales{
+    flex-basis: calc(40% - 2rem);
+}
+
+.entrada-blog {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+}
+
+.entrada-blog:last-of-type{
+    margin-bottom: 0;
+}
+
+.entrada-blog .imagen {
+    flex-basis: 40%;
+}
+
+.entrada-blog .texto-entrada{
+    flex-basis: calc(60% - 3rem);
+}
+
+.texto-entrada h4 {
+    margin: 0;
+    line-height: 1.4;
+}
+
+.texto-entrada a{
+    color: black;
+    text-decoration: none;
+}
+
+.texto-entrada h4::after {
+    content: '';
+    display: block;
+    width: 15rem;
+    height: .5rem;
+    background-color: #71b100;
+    margin-top: 1rem;
+}
+
+.texto-entrada span{
+    color: #E08709;
+}
+
+/** Testimoniales **/
+
+.testimonial {
+    background-color: #71b100;
+    border-radius: 2rem;
+    font-size: 2.4rem;
+    color: #FFFFFF;
+    padding: 2rem;
+}
+.testimonial p{
+    text-align: right;
+}
+.testimonial blockquote::before{
+    content:'';
+    background-image: url(..//img/comilla.svg);
+    width: 4rem;
+    height: 4rem;
+    position: absolute;
+    left: -2rem;
+}
+
+.testimonial blockquote{
+    padding-left: 5rem;
+    position: relative;
+    font-weight: 300;
+}
+
+/** Footer **/
+
+.site-footer {
+    background-color: #333333;
+    margin: 0;
+}
+
+.contenedor-footer{
+    padding: 3rem 0;
+    display: flex;
+    justify-content: space-between;
+    }
+
+.copyright {
+    margin: 0;
+    color: #FFFFFF;
+}
