--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,7 @@ h4 {
 .contenedor-anuncios {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 2rem;
 }
 
 .anuncio{
@@ -183,6 +184,23 @@ h4 {
     justify-content: flex-end;
 
 }
+
+.iconos-caracteristicas {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: space-evenly;
+    max-width: 50rem;
+}
+
+.iconos-caracteristicas li {
+    display: flex;
+}
+
+.iconos-caracteristicas li img{
+    margin-right: 2rem;
+}
+
 
 /** Contacto Home */
 
