--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,11 @@ h4 {
     margin-top: 3rem;
     text-align: center;
     text-decoration: none;
+    border: none;
 }
-
+.boton:hover{
+    cursor: pointer;
+}
 .boton-amarillo {
     background: #E08709;
 }
@@ -80,7 +83,9 @@ h4 {
     background: #71b100;
 }
 
-
+.contenido-centrado {
+    max-width: 800px;
+}
 /*Header*/
 
 .site-header {
@@ -191,6 +196,7 @@ h4 {
     display: flex;
     justify-content: space-evenly;
     max-width: 50rem;
+    flex: 1;
 }
 
 .iconos-caracteristicas li {
@@ -339,4 +345,60 @@ h4 {
 
 .parrafos-nosotros {
     text-align: justify;
+}
+
+.resumen-propiedad {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/**Contacto**/
+legend {
+    font-size: 2.5rem;
+    color: #333333;
+}
+
+label {
+    display: block;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+input:not([type="submit"]),
+textarea {
+    padding: 1rem;
+    display: block;
+    width: 100%;
+    background-color: #e1e1e1e1;
+    border: none;
+    border-radius: 1rem;
+}
+input[type="radio"]{
+    width: auto;
+}
+
+select {
+    padding: 1rem;
+    display: block;
+    width: 100%;
+    background-color: #e1e1e1e1;
+    border: none;
+    border-radius: 1rem;
+}
+
+textarea{
+    height: 20rem;
+}
+
+.form-contacto {
+    max-width: 30rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+.contacto p{
+    font-size: 1.5rem;
+    margin: 2rem 0 0 0;
 }
