--- a/css/style.css
+++ b/css/style.css
@@ -206,16 +206,23 @@ h4 {
 
 /** Anuncios **/
 
-.contenedor-anuncios {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 2rem;
+@media (min-width: 768px) {
+    .contenedor-anuncios {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 2rem;
+    }
 }
 
 .anuncio {
-    flex-basis: calc(33.3% - 1rem);
     border: 1px solid #B5B5B5;
     background: #f5f5f5;
+}
+
+@media (min-width: 768px) {
+    .anuncio {
+        flex-basis: calc(33.3% - 1rem);
+    }
 }
 
 .contenido-anuncio {
@@ -277,7 +284,7 @@ h4 {
 }
 
 .contenido-contacto {
-    flex: 1;
+    flex: 0 0 95%;
     color: #FFFFFF;
 }
 
@@ -288,23 +295,28 @@ h4 {
 
 /** Sección inferior **/
 
-.seccion-inferior {
-    display: flex;
-    justify-content: space-between;
-}
-
-.seccion-inferior .blog {
-    flex-basis: 60%;
-}
-
-.seccion-inferior .testimoniales {
-    flex-basis: calc(40% - 2rem);
+@media (min-width: 768px) {
+    .seccion-inferior {
+        display: flex;
+        justify-content: space-between;
+    }
+    .seccion-inferior .blog {
+        flex-basis: 60%;
+    }
+    .seccion-inferior .testimoniales {
+        flex-basis: calc(40% - 2rem);
+    }
 }
 
 .entrada-blog {
-    display: flex;
-    justify-content: space-between;
     margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+    .entrada-blog {
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
 .entrada-blog:last-of-type {
@@ -380,10 +392,26 @@ h4 {
     margin: 0;
 }
 
+.site-footer nav {
+    display: none;
+}
+
+@media (min-width: 768px) {
+    .site-footer nav {
+        display: block;
+    }
+}
+
 .contenedor-footer {
     padding: 3rem 0;
-    display: flex;
-    justify-content: space-between;
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+    .contenedor-footer {
+        display: flex;
+        justify-content: space-between
+    }
 }
 
 .copyright {
